again file added

--- a/index.html
+++ b/index.html
@@ -20,14 +20,35 @@
         <a href="#">Testimonial</a>
         <a href="#">Contact</a>
     </div>
+    <div class="clr"></div>
     <!-- menu part end  -->
 
+    <!-- banner part start  -->
+    <section>
+        <div class="banner_part">
+            <div class="banner_text">
+                <h1>HELLO, I'M <span>MOJMUL HAQUE</span></h1>
+                <p>A professional Developer And a Creative Designer</p>
+                <a href="#" class="common_btn">Hire Me</a>
+            </div>
+            <div class="banner_img">
+                <img src="images/do not use this pic.png" alt="don't used this pic 1">
+            </div>
+        </div>
+    </section>
+    <!-- banner part end  -->
 
 
 
 
-    <!-- menu part start  -->
-    <!-- menu part end  -->
+
+
+
+
+
+
+
+
     <!-- menu part start  -->
     <!-- menu part end  -->
     <!-- menu part start  -->
