again added new file

--- a/index.html
+++ b/index.html
@@ -24,35 +24,43 @@
     <!-- menu part end  -->
 
     <!-- banner part start  -->
-    <section>
-        <div class="banner_part">
-            <div class="banner_text">
-                <h1>HELLO, I'M <span>MOJMUL HAQUE</span></h1>
-                <p>A professional Developer And a Creative Designer</p>
-                <a href="#" class="common_btn">Hire Me</a>
-            </div>
-            <div class="banner_img">
-                <img src="images/do not use this pic.png" alt="don't used this pic 1">
-            </div>
+    <section class="banner_part">
+        <div class="banner_text">
+            <h1>HELLO, I'M <span>MOJMUL HAQUE</span></h1>
+            <p>A professional Developer And a Creative Designer</p>
+            <a href="#" class="common_btn">Hire Me</a>
+        </div>
+        <div class="banner_img">
+            <img src="images/do not use this pic.png" alt="don't used this pic 1">
         </div>
     </section>
     <!-- banner part end  -->
 
+    <!-- about part start  -->
+    <section id="about_part">
+        <div class="about_img">
+            <img src="images/do not use this pic2.png" alt="don't use this image 2">
+        </div>
+        <div class="about_text">
+            <h2>About Me</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione reiciendis quae error minus repellendus vitae! Natus ipsum consectetur nulla vero, adipisci, ipsa, deserunt hic odio voluptas facilis ad sunt cupiditate?</p>
+            <a href="#" class="common_btn">Dowonload CV</a>
+        </div>
+        <div class="clr"></div>
+    </section>
+    <!-- about part end  -->
 
 
+    <!-- work part start  -->
+    <section class="work_part">
+        <div class="work_head">
+            <div class="work_text">
+                <h2><span>About</span> Latest Working Project</h2>
+            </div>
+        </div>
+    </section>
+    <!-- work part end  -->
 
-
-
-
-
-
-
-
-
-    <!-- menu part start  -->
-    <!-- menu part end  -->
-    <!-- menu part start  -->
-    <!-- menu part end  -->
     <!-- menu part start  -->
     <!-- menu part end  -->
     <!-- menu part start  -->
