--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;600;700&family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700;800&family=Poppins:wght@300;400;500;600;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -15,7 +15,6 @@
         <a href="#">Home</a>
         <a href="#">About</a>
         <a href="#">Work</a>
-        <a href="#">Portfolio</a>
         <a href="#">Gallery</a>
         <a href="#">Testimonial</a>
         <a href="#">Contact</a>
@@ -24,14 +23,14 @@
     <!-- menu part end  -->
 
     <!-- banner part start  -->
-    <section class="banner_part">
+    <section id="banner_part">
         <div class="banner_text">
             <h1>HELLO, I'M <span>MOJMUL HAQUE</span></h1>
-            <p>A professional Developer And a Creative Designer</p>
+            <p>A professional Web Developer And a Creative Designer</p>
             <a href="#" class="common_btn">Hire Me</a>
         </div>
         <div class="banner_img">
-            <img src="images/do not use this pic.png" alt="don't used this pic 1">
+            <img src="images/banner1.png" alt="banner1">
         </div>
     </section>
     <!-- banner part end  -->
@@ -39,31 +38,199 @@
     <!-- about part start  -->
     <section id="about_part">
         <div class="about_img">
-            <img src="images/do not use this pic2.png" alt="don't use this image 2">
+            <img src="images/about.png" alt="about">
         </div>
         <div class="about_text">
-            <h2>About Me</h2>
+            <h2><span>About</span> Me</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione reiciendis quae error minus repellendus vitae! Natus ipsum consectetur nulla vero, adipisci, ipsa, deserunt hic odio voluptas facilis ad sunt cupiditate?</p>
+
+            <div class="bio_data">
+                <p><span>Name: </span> Mojmul Haque</p>
+                <p> <span>Email: </span> mojmul89@gmail.com</p>
+            </div>
+            <div class="bio_data">
+                <p><span> Birthday: </span> 30/03/2000</p>
+                <p><span>Study: </span> University of Dhaka</p>
+            </div>
+            <div class="bio_data">
+                <p><span>Phone:  </span> 01773786150</p>
+                <p><span>Website: </span>mywebsite.com</p>
+            </div>
+
             <a href="#" class="common_btn">Dowonload CV</a>
         </div>
-        <div class="clr"></div>
     </section>
     <!-- about part end  -->
 
 
     <!-- work part start  -->
-    <section class="work_part">
+    <section id="work_part">
         <div class="work_head">
-            <div class="work_text">
-                <h2><span>About</span> Latest Working Project</h2>
+            <h2><span>Latest</span> Working Project</h2>
+        </div>
+        <div class="work_inner">
+            <div class="work_img">
+                <img src="images/project1.jpg" alt="project1">
+                <div class="work_img_text">
+                    <h4>Power x-doctor(doctor website)</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus dolor eveniet quas qui, inventore ullam.</p>
+                </div>
+            </div>
+            <div class="work_img">
+                <img src="images/project2.png" alt="project2">
+                <div class="work_img_text">
+                    <h4>Creative Agency</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus dolor eveniet quas qui, inventore ullam.</p>
+                </div>
+            </div>
+            <div class="work_img">
+                <div class="work_img_text">
+                    <img src="images/project3.jpg" alt="project3">
+                    <h4>Hard Rock Music</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus dolor eveniet quas qui, inventore ullam.</p>
+                </div>
             </div>
         </div>
     </section>
     <!-- work part end  -->
 
+    <!-- gallery part start  -->
+    <section id="gallery_part">
+        <div class="gallery_head">
+            <h2>My <span>Gallery</span></h2>
+        </div>
+        <div class="gallery_inner">
+
+            <div class="gallery_img">
+                <img src="images/gallery1.jpg">
+            </div>
+            <div class="gallery_img">
+                <img src="images/gallery2.jpg">
+            </div>
+            <div class="gallery_img">
+                <img src="images/gallery3.jpg">
+            </div>
+            <div class="gallery_img">
+                <img src="images/gallery4.jpg">
+            </div>
+            <div class="gallery_img">
+                <img src="images/gallery5.jpg">
+            </div>
+            <div class="gallery_img">
+                <img src="images/gallery6.jpg">
+            </div>
+            <div class="gallery_img">
+                <img src="images/gallery1.jpg">
+            </div>
+            <div class="gallery_img">
+                <img src="images/gallery3.jpg">
+            </div>
+        </div>
+    </section>
+    <!-- gallery part end  -->
+
+
+    <!-- testimonial part start  -->
+    <section id="testimonial_part">
+        <div class="testi_head">
+            <h2>Clients <span>Say</span></h2>
+        </div>
+        <div class="testi_inner">
+            <div class="testi_main">
+                <div class="client_img">
+                    <img src="images/client1.png" alt="clinet1">
+                </div>
+                <div class="client_text">
+                    <h3>Gary McKinnon</h3>
+                    <h4>Professional Hacker</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora numquam iure quis illo harum qui excepturi eveniet eos magni reprehenderit perferendis quas vel repellendus, commodi voluptate tempore alias saepe. A!</p>
+                </div>
+            </div>
+            <div class="testi_main">
+                <div class="client_img">
+                    <img src="images/client1.png" alt="clinet2">
+                </div>
+                <div class="client_text">
+                    <h3>Jonathon James</h3>
+                    <h4>Professional Hacker</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora numquam iure quis illo harum qui excepturi eveniet eos magni reprehenderit perferendis quas vel repellendus, commodi voluptate tempore alias saepe. A!</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- testimonial part end  -->
+
+    <!-- blog part start  -->
+    <section id="blog_part">
+        <div class="blog_head">
+            <h2>Lates News & <span>Blogs</span></h2>
+        </div>
+        <div class="blog_inner">
+            <div class="blog_main">
+                <div class="blog_img">
+                    <img src="images/team1.png" alt="team1">
+                </div>
+                <div class="blog_img_text">
+                    <h5>Januray 6, 2020</h5>
+                    <h3>What's The Different Between Graphic And Web Design..</h3>
+                    <a href="#">Read More</a>
+                </div>
+            </div>
+            <div class="blog_main">
+                <div class="blog_img">
+                    <img src="images/team3.png" alt="team1">
+                </div>
+                <div class="blog_img_text">
+                    <h5>Januray 6, 2020</h5>
+                    <h3>What's The Different Between Graphic And Web Design..</h3>
+                    <a href="#">Read More</a>
+                </div>
+            </div>
+            <div class="blog_main">
+                <div class="blog_img">
+                    <img src="images/team2.png" alt="team1">
+                </div>
+                <div class="blog_img_text">
+                    <h5>Januray 6, 2020</h5>
+                    <h3>What's The Different Between Graphic And Web Design..</h3>
+                    <a href="#">Read More</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- blog part end  -->
+
     <!-- menu part start  -->
-    <!-- menu part end  -->
-    <!-- menu part start  -->
+    <section>
+        <div id="sub_banner">
+            <h4>WORK INQUIRY</h4>
+            <a href="#">Live Chat</a>
+        </div>
+    </section>
+
+    <section id="contact_part">
+        <div class="contact_head">
+            <h2>Contact <span>Me</span> </h2>
+        </div>
+        <div class="contact_inner">
+            <input type="text" placeholder="Name">
+
+            <input type="text" placeholder="Email">
+            <input type="text" class="msg" placeholder="Message">
+            <a href="#">Send Message</a>
+        </div>
+    </section>
+
+
+    <footer>
+        <div class="footer_head">
+            <h4>STAY CONNECTED</h4>
+            <h3>HELLO@DESIGN.COM</h3>
+            <a href="#"><img src="images/icons/Group 33059.png" alt=""></a>
+            <a href="#"><img src="images/icons/image 6.png" alt=""></a>
+            <a href="#"><img src="images/icons/image 7.png" alt=""></a>
+        </div>
+    </footer>
     <!-- menu part end  -->
 </body>
 
