--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     <!-- blog part start  -->
     <section id="blog_part">
         <div class="blog_head">
-            <h2>Lates News & <span>Blogs</span></h2>
+            <h2>Latest News & <span>Blogs</span></h2>
         </div>
         <div class="blog_inner">
             <div class="blog_main">
