--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
         <a href="#">Testimonial</a>
         <a href="#">Contact</a>
     </div>
-    <div class="clr"></div>
     <!-- menu part end  -->
 
     <!-- banner part start  -->
@@ -41,7 +40,7 @@
             <img src="images/about.png" alt="about">
         </div>
         <div class="about_text">
-            <h2><span>About</span> Me</h2>
+            <h2><span>ABOUT</span> ME</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione reiciendis quae error minus repellendus vitae! Natus ipsum consectetur nulla vero, adipisci, ipsa, deserunt hic odio voluptas facilis ad sunt cupiditate?</p>
 
             <div class="bio_data">
@@ -66,7 +65,7 @@
     <!-- work part start  -->
     <section id="work_part">
         <div class="work_head">
-            <h2><span>Latest</span> Working Project</h2>
+            <h2><span>LATEST</span> WORKING PROJECT</h2>
         </div>
         <div class="work_inner">
             <div class="work_img">
@@ -97,7 +96,7 @@
     <!-- gallery part start  -->
     <section id="gallery_part">
         <div class="gallery_head">
-            <h2>My <span>Gallery</span></h2>
+            <h2>MY <span>GALLERY</span></h2>
         </div>
         <div class="gallery_inner">
 
@@ -133,7 +132,7 @@
     <!-- testimonial part start  -->
     <section id="testimonial_part">
         <div class="testi_head">
-            <h2>Clients <span>Say</span></h2>
+            <h2><span>CLIENTS</span> SAY</h2>
         </div>
         <div class="testi_inner">
             <div class="testi_main">
@@ -163,7 +162,7 @@
     <!-- blog part start  -->
     <section id="blog_part">
         <div class="blog_head">
-            <h2>Latest News & <span>Blogs</span></h2>
+            <h2>LATEST NEWS & <span>Blogs</span></h2>
         </div>
         <div class="blog_inner">
             <div class="blog_main">
@@ -200,32 +199,20 @@
     </section>
     <!-- blog part end  -->
 
-    <!-- menu part start  -->
-    <section>
-        <div id="sub_banner">
-            <h4>WORK INQUIRY</h4>
-            <a href="#">Live Chat</a>
-        </div>
+    <!--  sub banner part start  -->
+    <section id="sub_banner">
+        <h4>WORK INQUIRY</h4>
+        <a href="#">Live Chat</a>
     </section>
 
-    <section id="contact_part">
-        <div class="contact_head">
-            <h2>Contact <span>Me</span> </h2>
-        </div>
-        <div class="contact_inner">
-            <input type="text" placeholder="Name">
+    <!--  sub banner part end  -->
 
-            <input type="text" placeholder="Email">
-            <input type="text" class="msg" placeholder="Message">
-            <a href="#">Send Message</a>
-        </div>
-    </section>
-
+    <!-- footer part start  -->
 
     <footer>
         <div class="footer_head">
             <h4>STAY CONNECTED</h4>
-            <h3>HELLO@DESIGN.COM</h3>
+            <h3>Mojmul89@gmail.com</h3>
             <a href="#"><img src="images/icons/Group 33059.png" alt=""></a>
             <a href="#"><img src="images/icons/image 6.png" alt=""></a>
             <a href="#"><img src="images/icons/image 7.png" alt=""></a>
