--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
             <a href="#"><img src="images/icons/image 7.png" alt=""></a>
         </div>
     </footer>
-    <!-- menu part end  -->
+    <!-- footer part end  -->
 </body>
 
 </html>
